# pywhapbot

./: .gitignore  .pywhapbot.pypirc  README.md  pyproject.toml  release.yml  requirements.txt  setup.cfg  setup.py
images/: iconmac.icns
pywhapbot/: __init__.py  install.py  whapbot.py
whapbot/: __init__.py  browsers.py  utils.py
