[metadata]
name = pywhapbot
version = 1.0.2
author = saizk
author_email = sergioaizcorbe@hotmail.com
description = WhatsApp Web API Wrapper for Chrome, Firefox, Opera, Brave and Edge.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saizk/pywhapbot
project_urls =
    Bug Tracker = https://github.com/saizk/pywhapbot/issues
classifiers =
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent

[options]
package_dir = .
packages = pywhapbot
python_requires = >=3.6

[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[bumpversion:file:setup.py]